--- a/khaibaoyte/src/App.css
+++ b/khaibaoyte/src/App.css
@@ -32,7 +32,23 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  flex: 1
+}
+
+.padding {
+  padding-top: 5%;
+  padding-bottom: 2%;
 }
